# yespo-service-client

./: AUTHORS  CMakeLists.txt  README  TODO
libs/: CMakeLists.txt
libs/qtcurve/: 01-isnan.patch  02-no_config_file.patch  03-dynamic_cast.patch  04-no_std_cout.patch  CMakeLists.txt  config.h
libs/qtlockedfile/: CMakeLists.txt  qtlockedfile_win.cpp
libs/qtsingleapplication/: 01-shared_qtlockedfile.patch  02-latin1.patch  03-unistd_h.patch  CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h
src/: CMakeLists.txt  product.h.in
src/capability/: CMakeLists.txt  calleedialog.cpp  calleedialog.h  calleedialog.ui  calleemainwindow.cpp  calleemainwindow.h  calleemainwindow.ui  callerdialog.cpp  callerdialog.h  callerdialog.ui  capability.qrc  capability.rc.in  capabilityapplication.cpp  capabilityapplication.h  configinfo.cpp  configinfo.h  main.cpp  translatormainwindow.cpp  translatormainwindow.h  translatormainwindow.ui
src/db/: CMakeLists.txt  abstractdatabasedaos.cpp  abstractdatabasedaos.h  abstractdatabasedaos_p.h  abstractdatabasemodel.cpp  abstractdatabasemodel.h  abstractdatabasemodel_p.h  abstractentitydao.cpp  abstractentitydao.h  abstractentitydao_p.h  abstractentitymodel.cpp  abstractentitymodel.h  abstractentitymodel_p.h  abstractentitytreemodel.cpp  abstractentitytreemodel.h  abstractentitytreemodel_p.h  database.cpp  database.h  database_p.h  databaseregistrar.cpp  databaseregistrar.h  db.rc.in  db.schema  dbglobal.h  entitydata.cpp  entitydata.h  genericdao.cpp  genericdao.h  genericdao_p.h  genericidentitydao.cpp  genericidentitydao.h  genericidentitydao_p.h  identityrecord.cpp  identityrecord.h  identityrecord_p.h  memorydatabase.cpp  memorydatabase.h  memorydatabase_p.h  oracledatabase.cpp  oracledatabase.h  (+13 more)
src/demo/: CMakeLists.txt  demo.qrc  demo.rc.in  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
src/im/: CMakeLists.txt  im.cpp  im.h  im.rc.in  im_p.h  imcommand.cpp  imcommand.h  imglobal.h  improtocol.h  imretransqueue.cpp  imretransqueue.h  imudppackage.cpp  imudppackage.h  imworkerthread.cpp  imworkerthread.h
src/intl/: CMakeLists.txt  intl.cpp  intl.h  intl.qrc.in  intl.rc.in  intl_qt.qrc.in  intlglobal.h
src/phone/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  abstractphoneview.cpp  abstractphoneview.h  audionavigate.cpp  audionavigate.h  audionavigate.ui  callcontrolpanel.cpp  callcontrolpanel.h  callcontrolpanel.ui  callinfo.cpp  callinfo.h  callinterpreterhelp.cpp  callinterpreterhelp.h  callinterpreterhelp.ui  callsplash.cpp  callsplash.h  callsplash.ui  contactprofile.cpp  contactprofile.h  contactprofile.ui  contactsitems_p.cpp  contactsitems_p.h  contactstreewidget.cpp  contactstreewidget.h  dtmfplate.cpp  dtmfplate.h  dtmfplate.ui  historytreewidget.cpp  historytreewidget.h  interpretationselect.cpp  interpretationselect.h  interpretationselect.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  messagepanel.cpp  (+48 more)
src/pref/: CMakeLists.txt  abstractpreference.cpp  abstractpreference.h  abstractpreference_p.h  defaultpreference.cpp  defaultpreference.h  pref.rc.in  preference.cpp  preference.h  preferencemanager.cpp  preferencemanager.h  preferencemanager_p.h  preferencesupport.cpp  preferencesupport.h  preferencesupport_p.h  preferencetransaction.cpp  preferencetransaction.h  preferencetransaction_p.h  prefglobal.h
src/proto/: CMakeLists.txt  package.cpp  package.h  proto.rc.in  protoglobal.h  request.cpp  request.h  yespo_protocol.pb.cc  yespo_protocol.pb.h  yespoproto.cpp  yespoproto.h  yespoproto_p.h
src/reporter/: CMakeLists.txt  main.cpp
src/service/: CMakeLists.txt  abstractdataservice.cpp  abstractdataservice.h  abstractdataservice_p.h  abstractservice.cpp  abstractservice.h  abstractservice_p.h  audioservice.cpp  audioservice.h  audioservice_p.h  cameraservice.cpp  cameraservice.h  cameraservice_p.h  command.cpp  command.h  commandservice.cpp  commandservice.h  commandservice_p.h  downloadqueue.cpp  downloadqueue_p.h  downloadthread.cpp  downloadthread.h  mediaservice.cpp  mediaservice.h  mediaservice_p.h  photoservice.cpp  photoservice.h  photoservice_p.h  service.cpp  service.h  service.rc.in  service_p.h  serviceglobal.h  servicemanager.cpp  servicemanager.h  servicemanager_p.h  sipcommand.cpp  sipcommand.h  sipservice.cpp  sipservice.h  (+4 more)
src/translator/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  audionavigate.cpp  audionavigate.h  audionavigate.ui  browser.cpp  browser.h  browser.ui  callinfo.cpp  callinfo.h  callmode.cpp  callmode.h  callmode.ui  callsplash.cpp  callsplash.h  callsplash.ui  closemethoddialog.cpp  closemethoddialog.h  closemethoddialog.ui  imageview.cpp  imageview.h  imageview.ui  main.cpp  messagepanel.cpp  messagepanel.h  messagepanel.ui  pagecalling.cpp  pagecalling.h  pagecalling.ui  pageframewindow.cpp  pageframewindow.h  pageframewindow.ui  pagelogin.cpp  pagelogin.h  pagelogin.ui  pagewelcome.cpp  pagewelcome.h  pagewelcome.ui  (+77 more)
src/ui/: CMakeLists.txt  abstractactionedit.cpp  abstractactionedit.h  application.cpp  application.h  boxshadow.cpp  boxshadow.h  checkproxymodel.cpp  checkproxymodel.h  coloredit.cpp  coloredit.h  confirmbox.cpp  confirmbox.h  customfadewidget.cpp  customfadewidget.h  customfontlabel.cpp  customfontlabel.h  customloadinglabel.cpp  customloadinglabel.h  custommoviewidget.cpp  custommoviewidget.h  customtreewidget.cpp  customtreewidget.h  elidedlabel.cpp  elidedlabel.h  floatpanel.cpp  floatpanel.h  fontedit.cpp  fontedit.h  framelessdialog.cpp  framelessdialog.h  framelesshelper.cpp  framelesshelper.h  framelesshelper_p.h  framelessmainwindow.cpp  framelessmainwindow.h  framelessvideodialog.cpp  framelessvideodialog.h  imagelabel.cpp  imagelabel.h  (+27 more)
src/up2date/: CMakeLists.txt  XLiveUpdate.ini  XLiveUpdate.ini.in  example.xml  feiplayer.xml
src/utility/: CMakeLists.txt  abstracttask.H  abstracttask.cpp  abstracttask_p.h  datetimerange.H  datetimerange.cpp  endpoint.H  endpoint.cpp  executioncontext.cpp  executioncontext.h  executionmonitor.cpp  executionmonitor.h  (+16 more)
(+213 files in other folders)
