SET_DIRECTORY_PROPERTIES(
    PROPERTIES
    COMPILE_DEFINITIONS_RELEASE QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_RELWITHDEBINFO QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_MINSIZEREL QT_NO_DEBUG_OUTPUT
)

ADD_SUBDIRECTORY( qjson )
ADD_SUBDIRECTORY( qtlockedfile )
ADD_SUBDIRECTORY( qtsingleapplication )
ADD_SUBDIRECTORY( qtcurve )
