
# --------------------------------------------------------------------
# Configurations
# --------------------------------------------------------------------
SET( BUILDSYS_APPLICATION_TELEPHONE "YesPo" )
SET( BUILDSYS_APPLICATION_TRANSLATOR "YesPoPartner" )
SET( BUILDSYS_APPLICATION_CAPABILITY "YesPoTest" )

SET( BUILDSYS_TELEPHONE_OUTPUT_NAME "YesPo" )
SET( BUILDSYS_TRANSLATOR_OUTPUT_NAME "YesPoPartner" )
SET( BUILDSYS_CAPABILITY_OUTPUT_NAME "YesPoTest" )
SET( BUILDSYS_IM_OUTPUT_NAME "im" )
SET( BUILDSYS_SERVICE_OUTPUT_NAME "service" )
SET( BUILDSYS_UI_OUTPUT_NAME "ui" )
SET( BUILDSYS_PREF_OUTPUT_NAME "pref" )
SET( BUILDSYS_DB_OUTPUT_NAME "db" )
SET( BUILDSYS_UTILITY_OUTPUT_NAME "utility" )
SET( BUILDSYS_INTL_OUTPUT_NAME "intl" )
SET( BUILDSYS_REPORTER_OUTPUT_NAME "CrashReport" )
# New module for private protocol
SET( BUILDSYS_PROTO_OUTPUT_NAME "proto" )

SET( CMAKE_INCLUDE_CURRENT_DIR ON )
SET( CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE ON )

BUILDSYS_ENABLE_EXCEPTIONS( FALSE )
BUILDSYS_ENABLE_RTTI( FALSE )

IF( BUILD_SHARED_LIBS )
    ADD_DEFINITIONS( -DBUILDSYS_SHARED_LIBS )
ENDIF( BUILD_SHARED_LIBS )

IF( BUILDSYS_ENABLE_SINGLE_APPLICATION )
    ADD_DEFINITIONS( -DBUILDSYS_ENABLE_SINGLE_APPLICATION )
ENDIF( BUILDSYS_ENABLE_SINGLE_APPLICATION)
IF( WIN32 )
    IF( BUILDSYS_ENABLE_ACTIVEQT_WORKAROUND )
        ADD_DEFINITIONS( -DBUILDSYS_ENABLE_ACTIVEQT_WORKAROUND )
    ENDIF( BUILDSYS_ENABLE_ACTIVEQT_WORKAROUND)
ENDIF( WIN32 )

IF( BUILDSYS_PHONE_LOGGING )
	ADD_DEFINITIONS( -DBUILDSYS_PHONE_LOGGING )
ENDIF( BUILDSYS_PHONE_LOGGING )

ADD_DEFINITIONS( -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_BYTEARRAY )

SET_DIRECTORY_PROPERTIES(
    PROPERTIES
    COMPILE_DEFINITIONS_RELEASE QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_RELWITHDEBINFO QT_NO_DEBUG_OUTPUT
    COMPILE_DEFINITIONS_MINSIZEREL QT_NO_DEBUG_OUTPUT
)

CONFIGURE_FILE( product.h.in product.h )

# --------------------------------------------------------------------
# Modules
# --------------------------------------------------------------------
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

IF( BUILDSYS_PACKAGE_PHONE )
	ADD_SUBDIRECTORY( phone )
ELSE( BUILDSYS_PACKAGE_PHONE )
	ADD_SUBDIRECTORY( translator )
ENDIF( BUILDSYS_PACKAGE_PHONE )

IF( BUILDSYS_BUILD_TEST )
	ADD_SUBDIRECTORY( capability )
ENDIF( BUILDSYS_BUILD_TEST )

ADD_SUBDIRECTORY( im )
ADD_SUBDIRECTORY( service )
ADD_SUBDIRECTORY( ui )
ADD_SUBDIRECTORY( pref )
ADD_SUBDIRECTORY( db )
ADD_SUBDIRECTORY( utility )
ADD_SUBDIRECTORY( intl )
# ADD_SUBDIRECTORY( up2date )
ADD_SUBDIRECTORY( reporter )
# New module for private protocol
ADD_SUBDIRECTORY( proto )
ADD_SUBDIRECTORY( demo )


# --------------------------------------------------------------------
# Databases
# --------------------------------------------------------------------
BUILDSYS_ADD_DATABASE_PROJECT( pref service )
