

SET( QTCURVE_VERSION_MAJOR "1" )
SET( QTCURVE_VERSION_MINOR "8" )
SET( QTCURVE_VERSION_PATCH "11" )
SET( QTCURVE_VERSION "${QTCURVE_VERSION_MAJOR}.${QTCURVE_VERSION_MINOR}" )
SET( QTCURVE_VERSION_FULL "${QTCURVE_VERSION}.${QTCURVE_VERSION_PATCH}" )

SET( QTC_QT_ONLY TRUE )

#CONFIGURE_FILE( config.h.cmake config.h )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

IF( UNIX )
    ADD_DEFINITIONS( -fPIC )
ENDIF( UNIX )

ADD_SUBDIRECTORY( style )
